added css to LocationItems

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -15,3 +15,11 @@ $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
 $desktop-breakpoint: 45em;
+
+
+$s-width: 10rem;
+$m-width: 15rem;
+$l-width: 20rem;
+$ll-width: 30rem;
+$xl-width: 40rem;
+$sl-width: 45rem;
