--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,4 @@
 @import './base/settings';
 @import './base/base';
-@import './components/GeoPhoto'
+@import './components/GeoPhoto';
+@import './components/LocationItem.scss'
